frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-frontend
  namespace: banking
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: bank.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banking-frontend
                port:
                  number: 80
